update setuptool entries and echo plugin

--- a/examples/simplebot_echo/setup.cfg
+++ b/examples/simplebot_echo/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = deltabot_echo
-version = attr: deltabot_echo.version
-description = Example deltabot echo plugin for http://delta.chat/
+name = simplebot_echo
+version = attr: simplebot_echo.version
+description = Example simplebot echo plugin for http://delta.chat/
 long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
-keywords = deltabot, plugin, echo
+keywords = simplebot, plugin, echo
 license = MPL
 classifiers =
             Development Status :: 3 - Alpha
@@ -18,11 +18,11 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-  deltabot
+  simplebot
 
 [options.entry_points]
-deltabot.plugins =
-  deltabot_echo = deltabot_echo  
+simplebot.plugins =
+  simplebot_echo = simplebot_echo
 
 [options.package_data]
 * = *.txt, *.rst
