--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,8 +25,7 @@ jobs:
         python -m pip install flake8 pytest
         python -m pip install requests  # deltachat tests requirements
         python -m pip install --pre -U -i https://m.devpi.net/dc/master deltachat
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -m pip install .
+        python -m pip install '.[test]'
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
