--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -18,9 +18,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - run: |
+        python -m pip install --upgrade pip black
+    - name: Check code with black
+      run: |
+        black --check .
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         python -m pip install requests  # deltachat tests requirements
         python -m pip install --pre -U -i https://m.devpi.net/dc/master deltachat
