--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,11 +2,15 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - dev
     tags:
       - 'v*.*.*'
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - dev
 
 jobs:
   test:
