--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,15 +2,11 @@ name: CI
 
 on:
   push:
-    branches:
-      - master
-      - dev
+    branches: [ master ]
     tags:
       - 'v*.*.*'
   pull_request:
-    branches:
-      - master
-      - dev
+    branches: [ master ]
 
 jobs:
   test:
