--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,8 +27,7 @@ jobs:
         black --check .
     - name: Install dependencies
       run: |
-        python -m pip install flake8 pytest
-        python -m pip install requests  # deltachat tests requirements
+        python -m pip install flake8
         python -m pip install --pre -U -i https://m.devpi.net/dc/master deltachat
         python -m pip install '.[test]'
     - name: Lint with flake8
