--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,16 +20,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - run: |
-        python -m pip install --upgrade pip black
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install flake8 black
+        python -m pip install '.[test]'
     - name: Check code with black
       run: |
         black --check .
-    - name: Install dependencies
-      run: |
-        python -m pip install flake8
-        python -m pip install --pre -U -i https://m.devpi.net/dc/master deltachat
-        python -m pip install '.[test]'
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
