--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.8]
+        python-version: [3.6, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -24,6 +24,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install '.[dev]'
+    - name: Check code with isort
+      run: |
+        isort --check .
     - name: Check code with black
       run: |
         black --check .
